final approach and server side cleaned with server side tests adapted